--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,7 +6,11 @@ services:
     container_name: grocery-store-backend-postgres
     ports:
       - "5432:5432"
+    volumes:
+    - postgres-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=ADMSTA
+volumes:
+  postgres-data:
 
