--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
+    "mockdate": "^3.0.5",
     "prettier": "^3.1.0",
     "prisma": "^5.3.1",
     "tsup": "^8.0.1",
