--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,16 +1,16 @@
-version: '3'
+version: "3"
 
 services:
   postgres:
     image: postgres:15.3
     container_name: grocery-store-backend-postgres
     ports:
-      - "5432:5432"
+      - "5433:5433"
     volumes:
-    - postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=ADMSTA
+    command: -p 5433
 volumes:
   postgres-data:
-
