--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prisma-generate": "prisma generate",
     "prisma-migrate": "npx prisma migrate",
     "prisma-migrate-dev": "npx prisma migrate dev",
-    "prepare": "chmod ug+x .husky/* && husky install",
+    "husky:install": " husky install",
+    "husky:prepare": "bash chmod ug+x .husky/* && yarn husky:install",
     "db:up": "docker compose -f docker-compose.dev.yml up -d",
     "db:down": "docker compose -f docker-compose.dev.yml down"
   },
