--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
     "morgan": "^1.10.0",
     "postgres": "^3.3.5",
     "reflect-metadata": "^0.2.1",
