--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,5 @@ PORT=8000
 # Example
 # DATABASE_URL="postgresql://postgres:ADMSTA@localhost:5432/background-check?schema=public"
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
+
+GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account.json
