--- a/.env.sample
+++ b/.env.sample
@@ -6,4 +6,6 @@ PORT=8000
 # DATABASE_URL="postgresql://postgres:ADMSTA@localhost:5432/background-check?schema=public"
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
 
-GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account.json
+FIREBASE_PROJECT_ID=firebase-project-id
+FIREBASE_CLIENT_EMAIL=firebase-client-email
+FIREBASE_PRIVATE_KEY=firebase-private-key
