refactor: add family related references to infra layer

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prisma-generate": "prisma generate",
     "prisma-migrate": "npx prisma migrate",
     "prisma-migrate-dev": "npx prisma migrate dev",
-    "husky:install": " husky install",
-    "husky:prepare": "bash chmod ug+x .husky/* && yarn husky:install",
+    "husky:install": "husky install",
+    "husky:prepare": "yarn husky:install && chmod ug+x .husky/* && yarn husky:install",
     "db:up": "docker compose -f docker-compose.dev.yml up -d",
     "db:down": "docker compose -f docker-compose.dev.yml down"
   },
