--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "tsx watch src/main/server.ts",
     "start": "node dist/src/main/server.js",
     "build": "tsup src prisma/**/*.ts --clean",
-    "lint": "eslint . --ext .js,.ts",
+    "lint": "biome check --apply-unsafe src ",
     "test": "vitest run --silent --reporter verbose",
     "test:watch": "vitest --silent --reporter verbose",
     "prisma-generate": "prisma generate",
@@ -35,6 +35,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@types/cors": "^2.8.14",
@@ -42,20 +43,9 @@
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.5.1",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard-with-typescript": "^39.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-standard": "^5.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^14.0.1",
     "mockdate": "^3.0.5",
-    "prettier": "^3.2.5",
     "prisma": "^5.14.0",
     "tsup": "^8.0.2",
     "tsx": "^4.11.0",
