chore: run lint and fix all issues identified by biome

--- a/biome.json
+++ b/biome.json
@@ -30,6 +30,9 @@
     "formatter": {
       "quoteStyle": "single",
       "semicolons": "always"
+    },
+    "parser": {
+      "unsafeParameterDecoratorsEnabled": true
     }
   },
   "files": {
