--- a/biome.json
+++ b/biome.json
@@ -24,10 +24,13 @@
   "formatter": {
     "enabled": true,
     "lineWidth": 100,
-    "indentStyle": "space"
+    "indentWidth": 2,
+    "indentStyle": "space",
+    "lineEnding": "lf"
   },
   "javascript": {
     "formatter": {
+      "enabled": true,
       "quoteStyle": "single",
       "semicolons": "always"
     },
@@ -36,6 +39,6 @@
     }
   },
   "files": {
-    "ignore": ["build/*", "dist/*", "public/*", "**/out/*", "**/node_modules/*", "prisma/*"]
+    "ignore": ["build/*", "dist/*", "public/*", "**/out/*", "**/node_modules/*", "./prisma/*"]
   }
 }
