--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "module": "CommonJS",
+    "module": "ES2022",
     "target": "ES2022",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "sourceMap": true,
     "baseUrl": "./",
     "strict": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
     "types": ["vitest/globals"],
     "paths": {
@@ -17,12 +17,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": [
-    "src",
-    "tests",
-    "prisma",
-    "commitlint.config.js",
-    "src/main/types/nodeModules/rule-engine.d.ts"
-  ],
+  "include": ["src", "tests", "prisma", "commitlint.config.js"],
   "exclude": []
 }
