--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase-admin": "^12.1.1",
     "morgan": "^1.10.0",
     "postgres": "^3.4.4",
+    "referral-codes": "^3.0.0",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0",
     "uuid": "^9.0.1",
@@ -38,6 +39,7 @@
     "@biomejs/biome": "1.8.3",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@faker-js/faker": "^8.4.1",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.5",
